[build-system]
# Mimum requirements for the build system to execute.
requires = [
    "pandas",
    "hatchling",
    "scikit-learn",
    "numpy",
]

build-backend = "hatchling.build"

[project]
name = 'rhessys_calibrater'
version = "0.0.2"
authors = [{name = "Ruoyu Zhang", email="ruoyuzhang1@gmail.com"}]
description = 'A package for RHESSys model (https://github.com/RHESSys/RHESSys) calibration using MCMC and k-means clustering'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.urls]
homepage = 'https://github.com/ruoyu93/rhessys_calibrater'